[tool.poetry]
name = "sqlalchemy-bindparam"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_bindparam"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["postgresql"], version = "^2.0.6"}
pydantic = {extras = ["dotenv"], version = "^1.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
